--- a/disconf-web/html/register.html
+++ b/disconf-web/html/register.html
@@ -39,7 +39,7 @@
                 <span class="span2"> </span>
                 <form class="navbar-form pull-left">
                     <button class="btn btn-warning" title="GitHub" type="button" style=""
-                            onclick="window.open('https://github.com/knightliao/disconf', '_blank');">
+                            onclick="window.open('https://github.com/ledotcom/disconf', '_blank');">
                         <i class="icon-circle-arrow-up  icon-white"></i> <b>GitHub</b>
                     </button>
                 </form>
@@ -119,11 +119,8 @@
                 <a href="#" class="dark">升级</a> &nbsp;
             </strong>
             <div class="sep10"></div>
-            <span>分布式配置管理平台</span>
-            <div class="sep10"></div>
-                    <span class="myfade">Theme by <a href="http://sov5.com/" target="_blank">Sov5搜索</a>，
-                        Power by 百度程序化广告交易工程平台技术部，
-                    Copyright &copy; 2014~2016 </span>
+            <span>乐视商城-分布式配置管理平台</span>
+            <div class="sep10"></div>                 
         </div>
     </div>
 </div>
